v0.5.0/_sources/projections/azim/azim_general_stereographic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/azim/azim_general_stereographic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_azim_azim_general_stereographic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_azim_azim_general_stereographic.py:


General Stereographic
=====================

This map projection is a conformal, azimuthal projection. It is mainly used
with a projection center in one of the poles. Then meridians appear as straight
lines and cross latitudes at a right angle. Unlike the azimuthal equidistant
projection, the distances in this projection are not displayed in correct
proportions. It is often used as a hemisphere map like the Lambert Azimuthal
Equal Area projection.

**s**\ *lon0/lat0*\ [*/horizon*]\ */scale*
or **S**\ *lon0/lat0*\ [*/horizon*\]\ */width*

The projection type is set with **s** or **S**. *lon0/lat0* specifies the
projection center, the optional *horizon* parameter specifies the maximum
distance from projection center (in degrees, < 180, default 90), and the
*scale* or *width* sets the size of the figure.

.. GENERATED FROM PYTHON SOURCE LINES 20-25



.. image-sg:: /projections/azim/images/sphx_glr_azim_general_stereographic_001.png
   :alt: azim general stereographic
   :srcset: /projections/azim/images/sphx_glr_azim_general_stereographic_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    fig.coast(region=[4, 14, 52, 57], projection="S0/90/12c", frame="ag", land="gray")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.959 seconds)


.. _sphx_glr_download_projections_azim_azim_general_stereographic.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: azim_general_stereographic.py <azim_general_stereographic.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: azim_general_stereographic.ipynb <azim_general_stereographic.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
